--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -19,7 +19,7 @@
               <input type="password" class="form-control form-control-lg" placeholder="Password" formControlName="password">
             </fieldset>
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right" type="submit">
+          <button class="btn btn-lg btn-primary pull-xs-right" type="submit" [disabled]="isSubmitting$ | async">
             Sign up
           </button>
         </form>
