--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -23,5 +23,11 @@
       HERE LIST OF TAGS
     </a>
   </div>
-  PAGINATION
+  <mc-pagination
+    [total]="(feed$ | async)?.articlesCount"
+    [limit]="limit"
+    [url]="baseUrl"
+    [currentPage]="currentPage"
+  >
+    </mc-pagination>
 </div>
