--- a/src/app/shared/modules/feedToggle/components/feedToggle/feedToggle.component.html
+++ b/src/app/shared/modules/feedToggle/components/feedToggle/feedToggle.component.html
@@ -4,7 +4,7 @@
       <a [routerLink]="['/feed']" class="nav-link" routerLinkActive="active">Your feed</a>
     </li>
     <li class="nav-item">
-      <a [routerLink]="['/']" class="nav-link" routerLinkActive="active">Global feed</a>
+      <a [routerLink]="['/']" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Global feed</a>
     </li>
     <li class="nav-item" *ngIf="tagNameProps">
       <a [routerLink]="['/tags', tagNameProps]" class="nav-link" routerLinkActive="active">
