--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -19,7 +19,9 @@
             <em class="ion-edit"></em>
             Edit Article
           </a>
-          DELETE BUTTON
+          <button class="btn btn-outline-danger btn-sm" (click)="deleteArticle()">
+            Delete Article
+          </button>
         </span>
       </div>
     </div>
