--- a/src/app/createArticle/components/createArticle/createArticle.component.html
+++ b/src/app/createArticle/components/createArticle/createArticle.component.html
@@ -1,1 +1,6 @@
-<mc-article-form></mc-article-form>
+<mc-article-form
+  [initialValues]="initialValues"
+  [isSubmitting]="false"
+  (articleSubmit)="onSubmit($event)"
+>
+</mc-article-form>
