--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -15,7 +15,7 @@
           </span>
         </div>
         <span *ngIf="isAuthor$ | async">
-          <a [routerLink]="['/articles', article.slug, '/edit']" class="btn btn-outline-secondary btn-sm">
+          <a [routerLink]="['/articles', article.slug, 'edit']" class="btn btn-outline-secondary btn-sm">
             <em class="ion-edit"></em>
             Edit Article
           </a>
