--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -13,7 +13,11 @@
         <span class="date">{{article.createdAt}}</span>
       </div>
       <div class="pull-xs-right">
-         ADD TO FAVORITES
+        <mc-add-to-favorites
+          [isFavorite]="article.favorited"
+          [articleSlug]="article.slug"
+          [favoritesCount]="article.favoritesCount"
+        ></mc-add-to-favorites>
       </div>
     </div>
     <a [routerLink]="['/articles', article.slug]" class="preview-link">
